Исправление ошибок, новые страницы.

--- a/css/kengry.css
+++ b/css/kengry.css
@@ -1,4 +1,3 @@
-
 .sup-online {
   color: #458842;
 }
@@ -8,4 +7,26 @@
 .delete-link,
 .red-link {
   color: #ba4b45;
+}
+
+/*
+В Бутстрапе подсказки для элементов формы обозначаются классами:
+.block-help — под элементом;
+.block-inline — справа от элемента.
+
+При выводе ошибок используется дополнительный класс .error для слоя с классом .control-group,
+который красит подсказки в красный цвет. Получается, что подсказка и ошибка не различаются, что не правильно.
+
+Есть решение данной проблемы: https://github.com/twitter/bootstrap/pull/2173,
+но его нет в оффициальном релизе.
+*/
+.control-group.error .help-block,
+.control-group.error .help-inline {
+  /* Гасим красный цвет для подсказок при выводе ошибок. */
+  color: #444444;
+}
+
+.control-group.error .error {
+  /* Ошибки красим обратно в красный. */
+  color: #b94a48;
 }
