--- a/partner/css/kengry.css
+++ b/partner/css/kengry.css
@@ -60,7 +60,7 @@
 
     Нужно сделать отступ сверху, чтобы плеер не прилипал к подсказке, а ссылку «удалить» поместить справа от плеера. */
     .sound-manager { padding: 10px 0 5px 0; }
-    .p-sound-manager { margin: -24px 0 0 167px; }
+    .p-sound-manager1 { margin: -24px 0 0 167px; }
 
 /*  Хак №7
     Убираем мигание лэйблов в логах */
