Добавил в верстку разные варианты отображения настроек call-центра.

--- a/partner/css/kengry.css
+++ b/partner/css/kengry.css
@@ -58,9 +58,8 @@
 /*  Хак №6
     Sound Manager
 
-    Нужно сделать отступ сверху, чтобы плеер не прилипал к подсказке, а ссылку «удалить» поместить справа от плеера. */
+    Нужно сделать отступ сверху, чтобы плеер не прилипал к подсказке. */
     .sound-manager { padding: 10px 0 5px 0; }
-    .p-sound-manager1 { margin: -24px 0 0 167px; }
 
 /*  Хак №7
     Убираем мигание лэйблов в логах */
