Добавил 2 хака для Бутстрапа
1. Отступы для заголовка
2. Класс со стилем, заменяющим тег <nobr>

--- a/partner/css/kengry.css
+++ b/partner/css/kengry.css
@@ -83,4 +83,11 @@
 
 /*  Хак №9
     Делаем отступы для <h2> сверху и снизу. */
-    h1 { padding: 20px 0 15px 0; } 
+    h1 { padding: 20px 0 15px 0; }
+
+/* Хак №10
+    Для случаев, когда нет возможности использовать неразрывный пробел, но не хочется использовать <nobr>.
+    Например, я не хочу, чтобы «call-центр» оказался на двух строках, а &nbsp; поставить некуда.
+    Можно написать так: <span class="nobr">call-центр</span>.
+    */
+    .nobr { white-space: nowrap; } 
