--- a/video/css/kengry.css
+++ b/video/css/kengry.css
@@ -1,6 +1,35 @@
 /*  Хак №1
-    Отступ сверху от «navbar». */
-    body { padding-top: 20px; }
+    Оформление формы входа:
+    http://twitter.github.com/bootstrap/examples/signin.html */
+    body {
+        padding-top: 40px;
+        padding-bottom: 40px;
+        background-color: #f5f5f5;
+      }
+
+      .form-signin {
+        max-width: 300px;
+        padding: 19px 29px 29px;
+        margin: 0 auto 20px;
+        background-color: #fff;
+        border: 1px solid #e5e5e5;
+        -webkit-border-radius: 10px;
+           -moz-border-radius: 10px;
+                border-radius: 10px;
+        -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+           -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+                box-shadow: 0 1px 2px rgba(0,0,0,.05);
+      }
+      .form-signin input[type="text"] {
+        font-size: 16px;
+        height: auto;
+        margin-bottom: 8px;
+        padding: 7px 9px;
+      }
+      .form-signin p {
+        font-size: 16px;
+        margin-bottom: 20px;
+      }
 
 /*  Хак №2
     Вывод ошибок
@@ -61,3 +90,10 @@
     Нужно сделать отступ сверху, чтобы плеер не прилипал к подсказке, а ссылку «удалить» поместить справа от плеера. */
     .sound-manager { padding: 10px 0 5px 0; }
     .p-sound-manager { margin: -24px 0 0 167px; }
+
+/*  Хак №7
+    Кнопочка Play на превьюшке к видео. */
+    .play {
+      position: absolute;
+      margin: 20px 0 0 32px;
+    }
