--- a/video/css/bootstrap-responsive.css
+++ b/video/css/bootstrap-responsive.css
@@ -114,7 +114,8 @@
   .navbar-static-top .container,
   .navbar-fixed-top .container,
   .navbar-fixed-bottom .container {
-    width: 1170px;
+    /*width: 1170px;*/
+    width: 720px;
   }
   .span12 {
     width: 1170px;
@@ -932,7 +933,8 @@
   }
 }
 
-@media (max-width: 979px) {
+/* @media (max-width: 979px) */
+@media (max-width: 500px) {
   body {
     padding-top: 0;
   }
