--- a/video/css/kengry.css
+++ b/video/css/kengry.css
@@ -4,7 +4,7 @@
     body {
         padding-top: 40px;
         padding-bottom: 40px;
-        background-color: #f5f5f5;
+        background-color: white;
       }
 
       .form-signin {
@@ -16,9 +16,9 @@
         -webkit-border-radius: 10px;
            -moz-border-radius: 10px;
                 border-radius: 10px;
-        -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-           -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-                box-shadow: 0 1px 2px rgba(0,0,0,.05);
+        -webkit-box-shadow: 0 1px 20px rgba(0,0,0,.05);
+           -moz-box-shadow: 0 1px 20px rgba(0,0,0,.05);
+                box-shadow: 0 1px 20px rgba(0,0,0,.05);
       }
       .form-signin input[type="text"] {
         font-size: 16px;
@@ -71,29 +71,32 @@
     }
 
 /*  Хак №4
-    Цветные ссылки */
-    .sup-online { color: #458842; }
-    .sup-offline { color: #ba4b45; }
-    .delete-link { color: #ba4b45; }
-    .red-link { color: #ba4b45; }
-    .green-link { color: #458842; }
-
-/*  Хак №5
-    Отступ для чек-бокса
-
-    В шаблоне partner/services.html нужно сделать отступ у чекбокса. */
-    .call-center-pin { padding-left: 37px; }
-
-/*  Хак №6
-    Sound Manager
-
-    Нужно сделать отступ сверху, чтобы плеер не прилипал к подсказке, а ссылку «удалить» поместить справа от плеера. */
-    .sound-manager { padding: 10px 0 5px 0; }
-    .p-sound-manager { margin: -24px 0 0 167px; }
-
-/*  Хак №7
     Кнопочка Play на превьюшке к видео. */
     .play {
       position: absolute;
-      margin: 20px 0 0 32px;
     }
+    .layer1 {
+      z-index: 1;
+      position: relative;
+    }
+    .layer2 {
+      z-index: 2;
+    }
+
+/*  Хак №5
+    Изменение @media
+    Ахтунг. Исправление сделано прямо в файле bootstrap-responsive.css:
+    
+    1) Чтобы пункты меню не скрывались, когда ширины еще хватает.
+       было: @media (max-width: 979px)
+       стало: @media (max-width: 500px)
+    
+    2) Чтобы всё было 720px. Это нужно исправить ещё и в bootstrap.css
+       .container,
+       .navbar-static-top .container,
+       .navbar-fixed-top .container,
+       .navbar-fixed-bottom .container {
+          было: width: 1170px;
+          стало: width: 720px;
+       }
+    */
