--- a/nord/css/kengry.css
+++ b/nord/css/kengry.css
@@ -88,7 +88,7 @@
     Меняем внешний вид тега <legend>. */
     legend {
       font-size: 18px;
-      background-color: #fff9e8;
+      background-color: #ecf6fb;
     }
     .legend-padding {
       padding-left: 220px;
