Обновление UI инженера: перепрошивка устройств, список объектов, чуть более аккуратная клавиатура.

--- a/keyboardist/css/kengry.css
+++ b/keyboardist/css/kengry.css
@@ -26,6 +26,5 @@
     }
 
 /*   */
-.align-center {
-  text-align: center;
-  }
+		.align-center { text-align: center; }
+		h3 { line-height: 24pt; }
