Партнёр: всплавайка со ссылками на интерфейс отчёта по тревогам для Посада.

--- a/partner/css/kengry.css
+++ b/partner/css/kengry.css
@@ -91,3 +91,14 @@
     Можно написать так: <span class="nobr">call-центр</span>.
     */
     .nobr { white-space: nowrap; }
+		
+/*  Хак №11
+    Отступы для формы со ссылками на отчет по тревогам и ситуационную карту:
+		1) выравнивание ссылки;
+		2) выравнивание галочки-подтверждения сохранения комментария. */
+		.links-up { margin: 5px 0 0 0; }
+		.links-down { margin: 0 0 10px 0; }
+		
+/*  Хак №12
+		Для отображения Tooltip в модальном окне. */
+		.tooltip.top {z-index: 50000;}
