Ошибка, если не удалось сгенерировать ссылку для клиента.

--- a/legman/css/common.css
+++ b/legman/css/common.css
@@ -345,3 +345,9 @@ textarea:focus, input[type="text"]:focus, input[type="password"]:focus, .unedita
 	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(82, 168, 236, 0.6);
 	outline: 0 none;
 }
+.error {
+	color: red;
+	line-height: 15px;
+	margin: 0;
+	padding: 10px 0 0 0;
+}
